Improves hover placement/size on mobile, small text fixes

--- a/frontend/public/widget/co2okWidgetXL-DZ.css
+++ b/frontend/public/widget/co2okWidgetXL-DZ.css
@@ -54,7 +54,11 @@
     @media (max-width: 768px) {
       .co2ok_widget_infobox_container {
         margin-left: -150px;
-        width: 300px; } }
+      } }
+    @media (max-width: 340px) {
+      .co2ok_widget_infobox_container {
+        width: 300px;
+      } }
     .co2ok_widget_infobox_container.ShowWidgetInfoBox {
       display: block;
       opacity: 1; }
